--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
             <div class="card">
               <img src="img/project-chatbot.png" class="card-img-top" alt="Project1" />
               <div class="card-body">
-                <p class="card-text text-center">Virtual Asistant Website Kampus</p>
+                <p class="my-1 card-text text-center">Virtual Asistant Website Kampus</p>
+                <p class="my-1 text-center">Klik <a target="_blank" href="https://indah04.github.io/">Disini</a></p>
               </div>
             </div>
           </div>
